# Analyzer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: dark_main.css  light_main.css  main.css
src/: main.rs
src/component/: comparison.rs  home.rs  loading.rs  mod.rs  nodups.rs  settings.rs  summary.rs
src/model/: media.rs  mod.rs  photo.rs  video.rs
