[package]
name = "kobo"
version = "0.1.0"
authors = ["CHXSER <elmoutaren@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
directories = "6.0.0"
image = "0.25.5"
image_hasher = "3.0.0"
rayon = "1.10.0"
rfd = "0.15.3"
vid_dup_finder_lib = "0.2.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
